kubernetes/infrastructure/zookeeper/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: default
spec:
  serviceName: zookeeper-service
  replicas: 1
  selector:
    matchLabels:
      service: zookeeper
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: zookeeper
    spec:
      securityContext:
        fsGroup: 1000 
      containers:
        - name: zookeeper
          imagePullPolicy: IfNotPresent
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
          resources:
            limits:
              memory: "300Mi"
          volumeMounts:
            - mountPath: /var/lib/zookeeper
              name: zookeeper-storage-pvc
      volumes:
        - name: zookeeper-storage-pvc
          persistentVolumeClaim:
            claimName: zookeeper-storage-pvc
